@@ -101,6 +101,13 @@ Changes to the Mercury standard library
 
 * The following predicates have been added:
 
+    - pred `make_io_error_from_system_error/5`
+    - pred `make_io_error_from_windows_error/5`
+    - pred `get_system_error/2`
+    - pred `get_errno_error/2`
+    - pred `get_windows_error/2`
+    - pred `get_exception_object_error/2`
+    - pred `get_system_error_name/2`
     - pred `write_binary_string_utf8/3`
     - pred `write_binary_string_utf8/4`
 
